# SocialActivityOfAPerson-

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  pyproject.toml  requirements.txt  streamlit_app.py
src/social_activity_of_a_person/: crew.py  main.py
src/social_activity_of_a_person/config/: agents.yaml  tasks.yaml
